<resources>
    <string name="app_name">F2F</string>
    <string name="face_to_face">Face-to-Face</string>
    <string name="content_text">Keeps you connected</string>
    <string name="title_activity_maps">F2F</string>
    <string name="activity_maps">Face-to-face map</string>
    <string name="messages">Messages</string>
    <string name="locshare">Location sharing</string>
    <string name="allinterests">All interests</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQs</string>
    <string name="share">Share this app</string>
    <string name="headertitle">Header title</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="select_image">Select image</string>
    <string name="set_name">Name</string>
    <string name="set_age">Age</string>
    <string name="set_gender">Gender</string>
    <string name="connecting">Connecting</string>
    <string name="registering">Registering</string>
    <string name="logging_in">Logging in</string>
    <string name="setupping">Setting up</string>
    <string name="save">Save</string>
    <string name="profile_image">Profile image</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="input_placeholder">Write a message</string>
    <string name="channel_users">Users</string>



    <string name="privacypolicy">Privacy policy</string>
</resources>
