<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set_image_lbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/profile_image_view2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="Logo"
            app:srcCompat="@mipmap/ic_launcher"
            android:clickable="true"/>

        <TextView
            android:id="@+id/set_name_lbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/set_age_lbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_age"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_age2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/set_gender_lbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/edit_gender2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save" />


    </LinearLayout>
</ScrollView>
