<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set_name_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name" />

        <TextView
            android:id="@+id/set_age_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_age"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_age"
            android:inputType="number" />

        <TextView
            android:id="@+id/set_gender_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <Spinner
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_gender"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/next3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/next" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>
</RelativeLayout>
